# PyTracker

./: LICENSE  README.md  pyproject.toml
examples/: README.md
src/PyTracker/: __init__.py
src/PyTracker/IO/: ReadROOT.py
src/PyTracker/QVision/: plot.py
src/pytracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test.py
